--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
 
 /* CSS untuk modal konfirmasi penghapusan */
 .modal {
-    display: none; /* Mengubah display menjadi none */
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    /* display: flex; */
     align-items: center;
     justify-content: center;
     z-index: 1;
